Fix base roll card for d6's. Also added CSS for non standard dice blocks, but they won't work out of the box. We don't have images for all of those dice.

--- a/less/chat.less
+++ b/less/chat.less
@@ -40,6 +40,10 @@
   grid-template-rows   : auto;
 }
 
+.d4-rollcard-data,
+.d8-rollcard-data,
+.d12-rollcard-data,
+.d20-rollcard-data,
 .d10-rollcard-data {
   display: grid;
   grid-template-columns: 175px auto;
@@ -49,6 +53,10 @@
     "d10-data d10-data";
 }
 
+.d4-dice-div,
+.d8-dice-div,
+.d12-dice-div,
+.d20-dice-div,
 .d10-dice-div {
   grid-area      : d10-dice;
   display        : flex;
@@ -56,6 +64,10 @@
   align-items: center;
 }
 
+.d4-number-div,
+.d8-number-div,
+.d12-number-div,
+.d20-number-div,
 .d10-number-div {
   grid-area : d10-number;
   min-height: 70px;
@@ -64,6 +76,10 @@
   padding-right: 5px;
 }
 
+.d4-data-div,
+.d8-data-div,
+.d12-data-div,
+.d20-data-div,
 .d10-data-div {
   grid-area      : d10-data;
   display        : flex;
